[package]
name = "hash-db"
version = "0.15.2"
authors = ["AXIA Technologies <admin@axiacoin.network>"]
description = "Trait for hash-keyed databases."
license = "Apache-2.0"
categories = [ "no-std" ]
repository = "https://github.com/axia-tech/trie"
edition = "2018"

[features]
default = ["std"]
std = [
]
