[package]
name = "hash256-std-hasher"
description = "Standard library hasher for 256-bit prehashed keys."
version = "0.15.2"
authors = ["AXIA Technologies <admin@axiacoin.network>"]
license = "Apache-2.0"
homepage = "https://github.com/axia-tech/trie"
categories = [ "no-std" ]
edition = "2018"

[[bench]]
name = "bench"
harness = false

[dependencies]
crunchy = "0.2.1"

[dev-dependencies]
criterion = "0.3.3"

[features]
default = ["std"]
std = []
