[package]
name = "trie-root"
version = "0.16.0"
authors = ["AXIA Technologies <admin@axiacoin.network>"]
description = "In-memory patricia trie operations"
repository = "https://github.com/axia-tech/trie"
license = "Apache-2.0"
categories = [ "no-std" ]
edition = "2018"

[dependencies]
hash-db = { path = "../hash-db", default-features = false, version = "0.15.2" }

[features]
default = ["std"]
std = [
	"hash-db/std"
]
