[package]
name = "reference-trie"
version = "0.23.0"
authors = ["AXIA Technologies <admin@axiacoin.network>"]
description = "Simple reference trie format"
repository = "https://github.com/axia-tech/trie/"
license = "Apache-2.0"
edition = "2018"

[dependencies]
hash-db = { path = "../../hash-db" , version = "0.15.2"}
hash256-std-hasher = { path = "../../hash256-std-hasher", version = "0.15.2" }
keccak-hasher = { path = "../keccak-hasher", version = "0.15.3" }
trie-db = { path = "../../trie-db", default-features = false, version = "0.22.0" }
trie-root = { path = "../../trie-root", default-features = false, version = "0.16.0" }
axia-scale-codec = { git = "https://github.com/axia-tech/axia-scale-codec", branch = "v2.3.1", version = "2.3.1", features = ["derive"] }

[dev-dependencies]
trie-bench = { path = "../trie-bench" }
criterion = "0.3.3"

[[bench]]
name = "bench"
harness = false

[features]
default = ["std"]
# no actual support for std, only to avoid a cargo issues
std = [
  "trie-db/std",
  "trie-root/std",
]
